--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-home_dir: ./mnt/homes
+home_dir: /Users/titus/python/student-home-cleaner/mnt/homes
 campus_id: 13
 inactive_duration_month: 1
 allowed_list:
