--- a/tools/config_sample.yml
+++ b/tools/config_sample.yml
@@ -3,4 +3,4 @@ intra:
   secret: ""
   uri: "https://api.intra.42.fr/oauth/token"
   endpoint: "https://api.intra.42.fr/v2"
-  scopes: ""
+  scopes: "public"
